# uv-vcrpy-urllib3

./: README.md  pyproject.toml  requirements.txt
src/uv_vcrpy_urllib3/: __init__.py
