[project]
name = "uv-vcrpy-urllib3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "vcrpy>=6.0.2",
]

[project.scripts]
uv-vcrpy-urllib3 = "uv_vcrpy_urllib3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
